Fixed not responsive width and removed the tap highlight color on mobile

--- a/src/components/UI/Input/input.module.css
+++ b/src/components/UI/Input/input.module.css
@@ -15,6 +15,7 @@
   position: relative;
   flex: 1;
   margin-left: 1em;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 .inputContainer:hover,
@@ -75,7 +76,7 @@ input[type='number']::-webkit-outer-spin-button {
   appearance: none;
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 768px) {
   .wrapper {
     flex-direction: column;
     padding: 1em 0;
